# speaking_club

./: .env.example  .gitignore  Pipfile  docker-compose.yml  main.py  pyproject.toml
apps/speaking_clubs/: admin.py  helpers.py  models.py  urls.py  views.py
apps/speaking_clubs/migrations/: 0001_initial.py  0002_alter_chat_options_remove_group_teachers_and_more.py  0004_auto_20221219_1126.py  0005_offer_order.py  0006_auto_20221225_1805.py  0007_order_name.py  0008_auto_20221225_1835.py  0009_student_user.py  0010_student_test.py  0011_auto_20221227_2045.py
docker/nginx/: sitename.conf  ystdtalk.conf
docker/python/: Dockerfile
speaking_club/: requirements.txt  settings.py  urls.py
speaking_club/apps/individual_lessons/: admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py
speaking_club/apps/individual_lessons/migrations/: 0001_initial.py  (+5 more)
speaking_club/apps/speaking_clubs/: addgroups.py  admin.py  helpers.py  models.py  urls.py  views.py
speaking_club/speaking_club/: settings.py  urls.py
speaking_club/static/css/: profile.css
speaking_club/templates/: base.html  error.html  login.html  main.html  main_from_gc.html  main_no_gc.html  profile.html  profile_my_group.html  profile_test_results.html  result.html  test.html  test2.html
speaking_club/templates/individual_lessons/: index.html  redirect.html
speaking_club/templates/robokassa/: error.html  fail.html  success.html
speaking_clubs/: admin.py  models.py
speaking_clubs/migrations/: 0003_chat_students.py
templates/: login.html  profile.html  result.html  test.html
(+18 files in other folders)
