[project]
name = "speaking-club-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=5.2.12",
    "django-bootstrap5>=26.2",
    "django-environ>=0.13.0",
    "django-jazzmin>=3.0.4",
    "gevent>=25.9.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pyzoom>=1.0.8",
    "social-auth-app-django>=5.7.0",
    "social-auth-core>=4.8.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
exclude = ["**/migrations/**"]
